# kitchen_bot

./: .env.example  .gitignore  README.md  build_ttk_template.py  pyproject.toml
generated_ttk/: TTK_B001_Гриль_ролл_с_говядиной_и_соусом_гриль-чи.docx  TTK_B004_Шаурма_классическая.docx  TTK_B010_Пицца_МАРГАРИТА_римская.docx
scripts/: check_competitors.py  recon_competitors.py  seed_competitors.py  test_calc.py  test_llm.py
src/: config.py
src/bot/: competitors.py  main.py  telegram_text.py
src/calc/: costs.py
src/competitors/: __init__.py  comparator.py  exporter.py  extractor.py  fetcher.py  format.py  html_text.py  models.py  service.py  storage.py
src/competitors/prompts/: extract_menu.md
src/data/: models.py  sheets.py
src/kitchen_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/llm/: client.py  format.py  history.py  tools.py
src/llm/prompts/: system.md  ttk_organoleptic.md  ttk_tech.md
src/ttk/: builder.py
tests/: test_calc.py  test_competitors.py
